--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <iframe id="jitsi" src="" width="100%" height="300" allow="camera; microphone" style="border:0;"></iframe>
     </div>
   </div>
+  <p>Enter room code to join:</p>
+<input type="text" id="roomInput" placeholder="Room code">
+<button onclick="joinRoom()">Join Room</button>
 
   <script src="script.js"></script>
 </body>
