--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <h1>🔥 Turns On</h1>
+  <h1> Turns On</h1>
 
   <div id="setup">
     <input type="text" id="roomCode" placeholder="Enter room code">
