--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.4.7/dist/peerjs.min.js"></script>
 </head>
 <body>
+  <div id="videoSection">
+  <video id="localVideo" autoplay muted playsinline></video>
+  <video id="remoteVideo" autoplay playsinline></video>
+  </div>
 
   <h1> Turns On</h1>
 
